# django-erd

./: .gitignore  README.md  main.py  pyproject.toml
src/django_erd/: apps.py  graph.py  introspect.py  schema.py  urls.py  views.py
src/django_erd/management/commands/: export_erd_graph.py  load_erd_graph.py
src/django_erd/static/django_erd/: erd.js  style.css
src/django_erd/templates/django_erd/: base.html  erd.html  index.html
testproject/: settings.py  urls.py
testproject/blog/: apps.py  models.py
testproject/shop/: apps.py  models.py
