[project]
name = "django-erd"
version = "0.2.0"
description = "Interactive ERD viewer for Django projects — add to INSTALLED_APPS and go"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "django>=3.2",
]

[dependency-groups]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/django_erd"]
